--- a/assignment-31/index.html
+++ b/assignment-31/index.html
@@ -6,6 +6,52 @@
     <title>Assignment31</title>
 </head>
 <body>
+    <!-- Första del.-->
+    <hr color="gold">
+
+        <a href="https://sv.wikipedia.org/wiki/Portal:Huvudsida"><img src="img/panda.JPG" alt="" width="500px"></a>
+        <p>Klicka på pandan för att komma till wikipedia</p>
+
+    <hr color="gold">
+
+    <figure>
+
+        <img src="img/ocean.jpeg" alt="" width="500px">
+        <figcaption>En bild från Käringön</figcaption>
+
+    </figure>
+
+    <hr color="gold">
+
+    <table border="1">
+
+            <tr>
+                <td></td>
+                <th>9am</th>
+                <th>10am</th>
+                <th>11am</th>
+                <th>12am</th>
+            </tr>
+
+            <tr>
+                <th>Monday</th>
+                <td colspan="2">Geography</td>
+                <td>Math</td>
+                <td>Art</td>           
+            
+            </tr>
+
+            <tr>
+                <th>Tuesday</th>
+                <td colspan="3">Gym</td>
+                <td>HomeEc</td>
+
+            </tr>
+
+
+    </table>
+
     
+   
 </body>
 </html>
