Added map for next assignment(33)

--- a/assignment-33/index.html
+++ b/assignment-33/index.html
@@ -6,6 +6,98 @@
     <title>Document</title>
 </head>
 <body>
+        <h1>De bästa djuren ever</h1>
+        <hr color="black">
+        <ul>
+            <li><a href="#section1">Panda</a></li>
+            <li><a href="#section2">Dhole</a></li>
+            <li><a href="#section3">Skogshund</a></li>
+            <li><a href="#section4">Brunbjörn</a></li>
+            <li><a href="#section5">Taki</a></li>
+            <li><a href="#section6">Visayavårtsvin</a></li>
+
+        </ul>
+<hr color="black">
+
+<!--Sektionen om Pandor-->
+
+        <section id="section1">
+            <h2>Panda</h2>
+                <figure>
+                    <img src="img/panda.jpg" alt="" width="500">    
+                </figure>
+            <p>Jättepandan (Ailuropoda melanoleuca) är en björnart som lever i centrala Kina, främst i bergsregionerna Sichuan, Gansu och Shanxi. Den kännetecknas av sin svartvita päls och sitt runda, vänliga ansikte. Trots att den är ett rovdjur består nästan 99% av dess kost av bambu, vilket den kan äta upp till 14 timmar om dagen. Den har specialiserade tänder och en extra "tumme", som hjälper den att greppa bambustjälkar.</p>
+            <p>Vuxna pandor blir mellan 1,5 och 1,7 meter långa och kan väga upp till 150 kg. De lever ensamma och söker sällskap främst under parningstiden. Pandahonor är dräktiga i ungefär fem månader och föder oftast en eller två ungar, men vanligtvis överlever bara en.</p>
+            <p>Jättepandan är en skyddad art, och stora bevaringsinsatser har gjorts för att rädda den från utrotning. Tack vare dessa insatser har den gått från att vara akut hotad till att klassas som sårbar, och det finns idag över 2 000 pandor kvar i det vilda.</p>
+        </section>
+        <hr color="black">
+
+<!--Sektionen om Dholer-->
+
+        <section id="section2">
+            <h2>Dhole</h2>
+            <figure>
+                <img src="img/dhole.jpg" alt="" width="500">    
+                </figure>
+            <p>Den asiatiska vildhunden, även kallad rödhund eller dhole (Cuon alpinus), tillhör familjen hunddjur och är den enda arten i släktet Cuon. Kroppen är 88 till 113 cm lång, svansen 41 till 50 cm, och vikten varierar från 10 till 20 kg, där honor är mindre än hanar. Pälsen är rödbrun eller orange, med vit buk och en mörk, yvig svans. Vildhunden har trekantiga öron och färgen varierar beroende på geografiskt läge. I nordliga områden är pälsen mer brun eller gulaktig.</p>
+            <p>Asiatiska vildhundar lever i flockar på 5–12 individer, med en tydlig hierarki där en dominant hane och hona leder gruppen. Flocken samarbetar vid jakt och uppfostring av ungar. Djuren jagar främst hjortdjur, men tar även mindre byten som möss och fåglar. De har få naturliga fiender, men kan dödas av tigrar och leoparder.</p>
+            <p>Arten förekommer över stora delar av Asien, från Ryssland till Indonesien, och lever i olika habitat, från skogar till bergstrakter. Den undviker dock öknar. IUCN klassificerar arten som starkt hotad, med ett bestånd på färre än 2 500 könsmogna individer. Minskningen beror på habitatförlust, sjukdomar från tamhundar och jakt på deras bytesdjur.</p>
+        </section>
+        <hr color="black">
+
+<!--Sektionen om Skogshundar-->
+
+        <section id="section3">
+            <h2>Skogshund</h2>
+            <figure>
+                <img src="img/bushdog.jpg" alt="" width="500">    
+                </figure>
+               <p> Skogshunden, eller buskhunden (Speothos venaticus), är ett sällsynt hunddjur som lever i Central- och Sydamerika, från Panama till Paraguay. Den är den enda arten i sitt släkte, Speothos. Skogshunden har korta ben, små runda öron och en kort svans, vilket gör att den påminner mer om ett mårddjur än ett hunddjur. Kroppen är 57,5–75 cm lång och väger mellan 5 och 8 kg. Pälsen är brun, med nyanser från ljus till mörk beroende på underart, och ungarna har en svart päls.</p> 
+               <p> Den förekommer främst i Sydamerikas norra delar och lever nära vatten i skogar, savanner och galleriskog. Skogshunden är mycket sällsynt och observeras oftare i Guyana och Peru. De är sociala och lever i flockar på 2–12 individer, ledda av ett alfapar. Flocken jagar tillsammans och kan fälla byten som agutier, vattensvin och ibland tapirer. Skogshundarna är duktiga simmare och använder ibland floder under jakt. </p>
+               <p>Skogshundar hotas främst av habitatförlust, sjukdomar från tamhundar och jakt av bönder som vill skydda sina djur. IUCN listar arten som nära hotad, och beståndet har minskat med 25 % på 12 år. </p>
+            </section>
+        <hr color="black">
+
+<!--Sektionen om Brunbjörnar-->
+
+        <section id="section4">
+            <h2>Brunbjörn</h2>
+            <figure>
+                <img src="img/brownbear.jpg" alt="" width="500">    
+                </figure>
+                <p>Den svenska brunbjörnen (Ursus arctos arctos) är en underart av brunbjörnen som främst finns i de norra och centrala delarna av landet. Den är stor och robust, med en päls som varierar från ljusbrun till mörkbrun. Hanarna väger mellan 100-350 kg och kan bli upp till 2,8 meter långa.</p>
+                <p>Björnen trivs i skogsområden där den hittar gott om föda, som bär, frukt och smådjur. Under hösten samlar den föda för att förbereda sig inför vintern. Brunbjörnar förökar sig vartannat år och honor föder 1-4 ungar efter en dräktighet på 7-8 månader. Ungarna stannar hos sin mamma i cirka två år.</p>
+                <p>Trots en stabil population i Sverige, hotas brunbjörnar av habitatförlust, urbanisering och konflikter med människor. Jakten på björnar regleras för att balansera populationen och minska konflikter. Brunbjörnen är en skyddad art, och den har en viktig roll i ekosystemet och Sveriges vilda djurliv. </p>
+
+        </section>
+        <hr color="black">
+
+<!--Sektionen om Takin-->
+
+        <section id="section5">
+            <h2>Takin</h2>
+            <figure>
+                <img src="img/takin.jpg" alt="" width="500">    
+                </figure>
+            <p>Mishmi takin (Budorcas taxicolor taxicolor) är en hotad bockantelope som är ursprunglig i Indien, Myanmar och Kina. Den lever främst i Nordöstra Indien och har en diet som omfattar en mängd olika växtmaterial, inklusive gräs, blad, blommor och även bambu.</p>
+            <p>Takin är en stor art av hovdjur inom underfamiljen Caprinae, som också inkluderar getter och får. Mishmi takin är en av fyra underarter av takin, som även omfattar gyllene takin, tibetansk takin och bhutanesisk takin. Mishmi takin förekommer i skogsmarker och alpina zoner på höjder mellan 1 000 och 4 500 meter över havet. De lever i små familjegrupper, men äldre hanar är ofta ensamma. Takin är växtätare och föredrar att beta tidigt på morgonen och sent på eftermiddagen.</p>
+            <p>Arten klassificeras som sårbar på IUCN rödlista och hotas av överjakt samt förlust av livsmiljöer på grund av avskogning och människans påverkan. Deras livsmiljöer minskar på grund av jordbruksexpansion och infrastrukturutveckling, vilket ytterligare försvårar deras överlevnad
+            </p>
+        </section>
+        <hr color="black">
+
+    <!--Sektionen om Visayavårtsvin-->
+        <section id="section6">
+            <h2>Visayavårtsvin</h2>
+            <figure>
+                <img src="img/visayanwartypig.jpg" alt="" width="500">    
+                </figure>
+            <p>Visayavårtsvinet (Sus cebifrons) är en utrotningshotad art av svin som är endemisk på Filippinerna, framför allt på öarna Negros och Panay. Djuret har en kroppslängd på 80–100 cm, en mankhöjd på cirka 60 cm och väger mellan 30 och 70 kg. Dess mörkbruna päls kännetecknas av tre par vårtor på huvudet och en lång man hos hanarna.</p>
+            <p>Visayavårtsvinet lever främst i regnskogar och är allätare, som föredrar frukter, rötter, insekter, ägg och små ryggradsdjur. De finns oftast i grupper om fyra till fem, men ensamma hanar kan också observeras.</p>
+            <p>Arten hotas av habitatförlust på grund av avskogning, jordbruk och jakt, vilket har lett till att den nu är akut hotad (CR) enligt IUCN. Många av deras naturliga livsmiljöer har försvunnit, och de betraktas även som skadedjur av bönder. För att bevara arten har det inrättats skyddszoner och avelsprogram i djurparker.</p>
+        </section>
+        <hr color="black">
+
     
 </body>
 </html>
